--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <ul>
         <li>I Like Programming & Stock Market Trading</li>
         <li>
-            <a href="https://www.youtube.com/channel/UCjhAzyFTm1xZY-Q_9k5RcbA">My Youtube Handel(Click Here)</a>
+            <a href="https://www.youtube.com/channel/UCjhAzyFTm1xZY-Q_9k5RcbA">My Youtube Handle(Click Here)</a>
           </li>
        </ul> 
     </p>
